# NSWCalibration

./: .clang-format  .clang-tidy  .gitlab-ci.yml  AltiController_patch.sh  AltiController_start_pattern_transition.diff  AltiController_user.diff  CMakeLists.txt  README.md  bb5_input_data.json  calibrate_thresholds.cpp  lxplus_input_data.json  set_dir.sh
.gitlab/ci/: test.yml
NSWCalibration/: .CalibrationMath.h.swo  .CalibrationMath.h.swp  .CalibrationSca.h.swp  BaseCalibration.h  BaseCalibration.hpp  CalibAlg.h  CalibTypes.h  CalibrationMath.h  CalibrationSca.h  Commands.h  Issues.h  MMStaircase.h  MMTPFeedback.h  MMTPInputPhase.h  MMTPStatusRegisters.h  MMTriggerCalib.h  NSWCalibAlg.h  NSWCalibArtInputPhase.h  NSWCalibException.h  NSWCalibRc.h  PDOCalib.h  Phase160MHzCalibration.h  Phase160MHzVmmCalibration.h  Phase40MHzVmmCalibration.h  ROCCalib.h  RocPhase160MhzCore.h  RocPhase160MhzVmm.h  RocPhase40MhzCore.h  RocPhaseCalibrationBase.h  SCAIDCalib.h  ScaCalibration.h  THRCalib.h  ThresholdCalibration.h  Utility.h  VmmBaselineScaCalibration.h  VmmBaselineThresholdScaCalibration.h  VmmConfigurationCheck.h  VmmThresholdScaCalibration.h  VmmTrimmerScaCalibration.h  sTGCPadTdsBcidOffset.h  (+14 more)
app/: Calibrate.cpp  NSWCalibRc_main.cpp  art_hit_counters.cpp  calibrate_3offsets.cpp  calibrate_clock_phase.cpp  calibrate_pulser.cpp  loop_pulser.cpp  mmtp_diagnostics.cpp  mmtp_feedback.cpp  nsw_art_input_phase.py  run_calibration.cpp  small_pulsing_test.cpp  toggle_alti_test.cpp  write_patterns.cpp
include/: CalibrationMath.h  CalibrationSca.h
main/: Calibrate.cpp  calibrate_pulser.cpp  loop_pulser.cpp  small_pulsing_test.cpp
python/: nsw_add_pad_trigger_in_json.py  nsw_art_input_phase.py  nsw_increase_threshold_in_json.py  nsw_mmtp_channelrates.py  nsw_mmtp_diagnostics.py  nsw_mmtp_event_display.py  nsw_pad_tds_bcid_offset.py  nsw_pads_control_phase.py  nsw_pads_deskew.py  nsw_pads_hit_rate.py  nsw_pads_l1ddc_fibers.py  nsw_pads_roc_tds_40mhz.py  nsw_pads_vmm_tds_channels.py  nsw_padtrigger_inputdelays.py  nsw_padtrigger_trig_bcid_rate.py  nsw_plot_art_hits.py  nsw_rocphase_analysis.py  nsw_rocphase_parse_json.py  nsw_rocphase_plotter.py  nsw_set_vmm_offset_by_layer_radius.py  nsw_track_pulse.py  nsw_trigger_mapping.py
schema/: NSWCalib.schema.xml
scripts/: analyze_vmm_status.py
src/: BaseCalibration.cpp  CalibAlg.cpp  CalibrationMath.cpp  CalibrationSca.cpp  MMStaircase.cpp  MMTPFeedback.cpp  MMTPInputPhase.cpp  MMTPStatusRegisters.cpp  MMTriggerCalib.cpp  NSWCalibAlg.cpp  NSWCalibArtInputPhase.cpp  NSWCalibRc.cpp  PDOCalib.cpp  Phase160MHzCalibration.cpp  Phase160MHzVmmCalibration.cpp  Phase40MHzVmmCalibration.cpp  ROCCalib.cpp  RocPhase160MhzCore.cpp  RocPhase160MhzVmm.cpp  RocPhase40MhzCore.cpp  RocPhaseCalibrationBase.cpp  SCAIDCalib.cpp  ScaCalibration.cpp  THRCalib.cpp  ThresholdCalibration.cpp  Utility.cpp  VmmBaselineScaCalibration.cpp  VmmBaselineThresholdScaCalibration.cpp  VmmConfigurationCheck.cpp  VmmThresholdScaCalibration.cpp  VmmTrimmerScaCalibration.cpp  sTGCPadTdsBcidOffset.cpp  sTGCPadTriggerInputDelays.cpp  sTGCPadTriggerToSFEB.cpp  sTGCPadTriggerTosFEB.cpp  sTGCPadVMMTDSChannels.cpp  sTGCPadsControlPhase.cpp  sTGCPadsHitRateL1a.cpp  sTGCPadsHitRateSca.cpp  sTGCPadsL1DDCFibers.cpp  (+6 more)
test/: run_unit_tests.py  test_PDOCalib.cpp  test_THRCalib.cpp
